--- a/projects.html
+++ b/projects.html
@@ -47,7 +47,7 @@
 
       <div class="projects__items">
         <div class="projects__item">
-          <img src="../image/simplyrecipe.png" alt="My Project">
+          <img src="./image/simplyrecipe.png" alt="My Project">
           <div class="projects__btns">
             <a href="https://github.com/Shivarajum/simplyrecipe" class="projects__btn">
               <i class="fas fa-eye"></i> Preview
@@ -58,7 +58,7 @@
           </div>
         </div>
         <div class="projects__item">
-          <img src="../image/calculator.png" alt="My Project">
+          <img src="./image/calculator.png" alt="My Project">
           <div class="projects__btns">
             <a href="https://github.com/Shivarajum/calculator" class="projects__btn">
               <i class="fas fa-eye"></i> Preview
@@ -69,7 +69,7 @@
           </div>
         </div>
         <div class="projects__item">
-          <img src="../image/digital clock.png" alt="My Project">
+          <img src="./image/digital clock.png" alt="My Project">
           <div class="projects__btns">
             <a href="https://github.com/Shivarajum/digitalclock" class="projects__btn">
               <i class="fas fa-eye"></i> Preview
@@ -80,7 +80,7 @@
           </div>
         </div>
         <div class="projects__item">
-          <img src="../image/todolist.png" alt="My Project">
+          <img src="./image/todolist.png" alt="My Project">
           <div class="projects__btns">
             <a href="https://github.com/Shivarajum/todolist" class="projects__btn">
               <i class="fas fa-eye"></i> Preview
